# LiftJourney

./: .dockerignore  .gitignore  Dockerfile  azure-pipelines.yml  docker-compose.yaml  gunicorn.conf.py  package-lock.json  package.json  planning.md  pyproject.toml  readmd.md  readme.md  requirements.in  requirements.txt
.github/workflows/: docker-image.yml  python-app.yml
backend/server/: __init__.py  app.py  authenticate.py  config.py  database_interface.py
backend/server/config/: AppConfig.py  BaseConfig.py  __init__.py  config.py
backend/server/models/: CategoriesDB.py  Client.py  ExerciseDB.py  ExerciseSetDB.py  FormFields.py  Forms.py  MuscleMapDB.py  SessionsDB.py  Workout.py  WorkoutDB.py  __init__.py
backend/server/routes/: __init__.py  admin.py  auth.py  database.py  mapping.py  service.py  status_codes.py
backend/src/: WorkoutManagement.py  __init__.py  dataframe_accessors.py  garmin_interaction.py  main.py
backend/tests/: login_test.py  manage_workouts_test.py  sorting_workouts_test.py  workout_test.py
nginx/: Dockerfile  nginx.conf
src/: Endpoints.py  Garmin.py  __init__.py  auth.py  garmin_data_processing.py  garmin_interaction.py  main.py  manage_workouts.py  test.py  user_tests.py
src/models/: ExerciseSet.py  Workout.py  __init__.py
src/utils/: __init__.py
tests/: manage_workouts_test.py  sample_data.py  sorting_workouts_test.py  test_manage_workouts.py  test_sorting_workouts.py  test_workout.py  workout_test.py
tests/flask/: __init__.py  test_login.py  test_service.py
utils/: Endpoints.py  Workout.py
(+44 files in other folders)
