[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.11"
name = "LiftJourney"
version = "0.1"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest", "pip-tools", "Flask-DebugToolbar", "black"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
